Fix Map z-index, path css

--- a/frontend/src/styles/components/Path.scss
+++ b/frontend/src/styles/components/Path.scss
@@ -23,4 +23,10 @@
   .path-select-container {
     margin: 0 1.6vw;
   }
+
+  .post-detail-path {
+    font-size: 14px;
+    font-weight: 500;
+    margin-left: 30px;
+  }
 }
